Fix event card image stretching

--- a/public/css/event-card-style.css
+++ b/public/css/event-card-style.css
@@ -41,7 +41,10 @@
 .event-card__img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
     display: block;
+    /* Fixes pixellation in Chrome */
+    overflow: visible;
 }
 
 .event-card__details {
@@ -64,7 +67,7 @@
     -webkit-line-clamp: 2;
     display: -webkit-box;
     -webkit-box-orient: vertical;
-    overflow: hidden;   
+    overflow: hidden;
     text-overflow: ellipsis;
 }
 
